[project]
name = "npro"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "loguru>=0.7.3",
    "pandas>=3.0.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
]

[tool.uv.build-backend]
module-name = "npro"
module-root = ""

[project.scripts]
npro = "npro.main:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
