[project]
name = "npro"
version = "0.1.1"
description = "Tool to automatically apply weather data to NPRO projects."
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "loguru>=0.7.3",
    "pandas>=3.0.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
]

[tool.setuptools]
packages = ["npro"]

[project.scripts]
npro = "npro.main:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
